# resource-loader

./: README.md  build.sh  package.cabal  run.sh
src/: Csvprocessor.hs  DownloadImage.hs  Main.hs  SummaryCsv.hs
